@@ -72,11 +72,11 @@ public class DiscussionAreaBean
 		  LOG.debug("setModerated()");
 		  if (moderated.equals(Boolean.TRUE.toString()))
 		  {
-			  area.setModerated(new Boolean(true));
+			  area.setModerated(Boolean.valueOf(true));
 		  }
 		  else
 		  {
-			  area.setModerated(new Boolean(false));
+			  area.setModerated(Boolean.valueOf(false));
 		  }
 	  }
 	  
